@@ -1,3 +1,6 @@
+2015-10-28 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* src/compare_db.c: fixed total number of entries
+
 2015-08-08 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* src/compare_db.c: added support for new e2fsattrs flags
 
